src/objects/Hipoteca__c.object
<CustomObject>
    <fields>
        <fullName>Condicion_de_pago__c</fullName>
        <label>Condicion de pago</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lote</label>
        <referenceTo>Lote__c</referenceTo>
        <relationshipLabel>Hipotecas</relationshipLabel>
        <relationshipName>Hipotecas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Hipoteca</label>
    <nameField>
        <label>Nombre de Hipoteca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hipotecas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>